add auth register endpoint
